- Removed several errors/warnings identified by FindBugs. The only   bug worth noticing was related to CompressedList (a NPE related   bug). - Some ArrayUtil static methods now perform a stricter error checking   (no null array are allowed).