@@ -20,10 +20,10 @@ public class TestBinarySearchTree_Functional
 
 	@Test
 	public void testCaseInsertion1()  {
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.insert(new Integer(2), tree.root);
-		tree.root = tree.insert(new Integer(3), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(2), tree.root);
+		tree.root = tree.insert(Integer.valueOf(3), tree.root);
 
 		assertEquals("3", tree.root.right.left.right.element.toString());
 
@@ -31,33 +31,33 @@ public class TestBinarySearchTree_Functional
 
 	@Test
 	public void testCaseInsertion2() {
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.insert(new Integer(2), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(2), tree.root);
 
 		assertEquals("2", tree.root.right.left.element.toString());
 	}
 
 	@Test
 	public void testCaseInsertion3() {
-		tree.root = tree.insert(new Integer(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
 		assertEquals("1", tree.root.element.toString());
 	}
 
 	@Test(expected=DuplicateItem.class)
 	public void testCaseInsertion4()  {
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.insert(new Integer(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
 	}
 
 
 	@Test
 	public void testCaseDeletion1()  {
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.insert(new Integer(2), tree.root);
-		tree.root = tree.remove(new Integer(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(2), tree.root);
+		tree.root = tree.remove(Integer.valueOf(4), tree.root);
 
 		assertEquals("1", tree.root.element.toString());
 		assertEquals("2", tree.root.right.element.toString());
@@ -65,10 +65,10 @@ public class TestBinarySearchTree_Functional
 
 	@Test
 	public void testCaseDeletion2() {
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.insert(new Integer(2), tree.root);
-		tree.root = tree.remove(new Integer(2), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(2), tree.root);
+		tree.root = tree.remove(Integer.valueOf(2), tree.root);
 
 		assertEquals("1", tree.root.element.toString());
 		assertEquals("4", tree.root.right.element.toString());
@@ -76,42 +76,41 @@ public class TestBinarySearchTree_Functional
 
 	@Test(expected=ItemNotFound.class)
 	public void testCaseDeletion3() {
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.remove(new Integer(2), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.remove(Integer.valueOf(2), tree.root);
 	}
 
 	@Test(expected=ItemNotFound.class)
 	public void testCaseDeletion4() {
-		tree.root = tree.remove(new Integer(2), tree.root);
+		tree.root = tree.remove(Integer.valueOf(2), tree.root);
 	}
 
 
 	@Test
 	public void testCaseSeaching1() {
 		Comparable f;
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.insert(new Integer(2), tree.root);
-		f = tree.find(new Integer(2));
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(2), tree.root);
+		f = tree.find(Integer.valueOf(2));
 		assertEquals("2", f.toString());
 	}
 
 	@Test(expected=ItemNotFound.class)
 	public void testCaseSearching2() {
-		Comparable f;
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.insert(new Integer(2), tree.root);
-		f = tree.find(new Integer(3));
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(2), tree.root);
+		tree.find(Integer.valueOf(3));
 	}
 
 	@Test
 	public void testCaseSearching3() {
 		Comparable f;
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.insert(new Integer(2), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(2), tree.root);
 		f = tree.findMin();
 
 		assertEquals("1", f.toString());
@@ -125,9 +124,9 @@ public class TestBinarySearchTree_Functional
 	@Test
 	public void testCaseSearching5() {
 		Comparable f;
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.insert(new Integer(2), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(2), tree.root);
 		f = tree.findMax();
 
 		assertEquals("4", f.toString());
@@ -140,9 +139,9 @@ public class TestBinarySearchTree_Functional
 
 	@Test
 	public void testCaseEmptyness1() {
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.insert(new Integer(2), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(2), tree.root);
 
 		assertEquals(false, tree.isEmpty());
 	}
@@ -154,9 +153,9 @@ public class TestBinarySearchTree_Functional
 
 	@Test
 	public void testCaseEmptyness3() {
-		tree.root = tree.insert(new Integer(1), tree.root);
-		tree.root = tree.insert(new Integer(4), tree.root);
-		tree.root = tree.insert(new Integer(2), tree.root);
+		tree.root = tree.insert(Integer.valueOf(1), tree.root);
+		tree.root = tree.insert(Integer.valueOf(4), tree.root);
+		tree.root = tree.insert(Integer.valueOf(2), tree.root);
 
 		tree.makeEmpty();
 		assertEquals(true, tree.isEmpty());
